Add new arrow skin and update configs

--- a/Mods/ArrowSkins/amongus/config.json
+++ b/Mods/ArrowSkins/amongus/config.json
@@ -4,5 +4,6 @@
     "DownColor":"#0010ff",
     "UpColor":"#00ff2f",
     "fileTypeStatic":".svg",
-    "fileTypeAnimated":".png"
+    "fileTypeAnimated":".png",
+    "size":40
     }
