--- a/Mods/ArrowSkins/circles/config.json
+++ b/Mods/ArrowSkins/circles/config.json
@@ -4,5 +4,6 @@
 "DownColor":"#00ffff",
 "UpColor":"#12fa05",
 "fileTypeStatic":".svg",
-"fileTypeAnimated":".svg"
+"fileTypeAnimated":".svg",
+"size":40
 }
