new awesome splashes

--- a/gameAssets/ArrowSkins/default/config.json
+++ b/gameAssets/ArrowSkins/default/config.json
@@ -5,5 +5,7 @@
     "UpColor":"#12fa05",
     "fileTypeStatic":".svg",
     "fileTypeAnimated":".svg",
-    "size":60
+    "size":80,
+    "frames":13,
+    "secondsPerFrame":0.03
     }
