--- a/gameAssets/ArrowSkins/amongus/config.json
+++ b/gameAssets/ArrowSkins/amongus/config.json
@@ -5,5 +5,7 @@
     "UpColor":"#12fa05",
     "fileTypeStatic":".svg",
     "fileTypeAnimated":".svg",
-    "size":60
+    "size":60,
+    "frames":4,
+    "secondsPerFrame":0.05
     }
