--- a/gameAssets/ArrowSkins/blocks/config.json
+++ b/gameAssets/ArrowSkins/blocks/config.json
@@ -1,12 +1,11 @@
 {
-    "LeftColor":"#c791bc",
-    "RightColor":"#ff3131",
-    "DownColor":"#00ffff",
-    "UpColor":"#12fa05",
+    "LeftColor":"#cf63cf",
+    "DownColor":"#4c97ff",
+    "UpColor":"#5fd65f",
+    "RightColor":"#fa5050",
     "fileTypeStatic":".svg",
     "fileTypeAnimated":".svg",
-    "size":100,
-    "frames":4,
-    "secondsPerFrame":0.05
-
-    }
+    "size":80,
+    "frames":13,
+    "secondsPerFrame":0.03    
+}
